<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:background="@color/colorWindowBackgroud">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/dialog_dynamic_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xx:xx"
                android:textColor="@color/colorTextPrimary"
                android:textSize="28sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  -  "
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/dialog_dynamic_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xx:xx"
                android:textColor="@color/colorTextPrimary"
                android:textSize="28sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/dialog_dynamic_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_date_range_white_36dp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_sun"
                android:textColor="@color/selector_dynamic_textcolor"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_mon"
                android:textColor="@color/selector_dynamic_textcolor"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_tue"
                android:textColor="@color/selector_dynamic_textcolor"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_wed"
                android:textColor="@color/selector_dynamic_textcolor"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_thu"
                android:textColor="@color/selector_dynamic_textcolor"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_fri"
                android:textColor="@color/selector_dynamic_textcolor"/>

            <CheckBox
                android:id="@+id/dialog_dynamic_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@null"
                android:text="@string/weekday_sat"
                android:textColor="@color/selector_dynamic_textcolor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_ac_unit_white_36dp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <GridView
                android:id="@+id/item_dynamic_gv_show"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:numColumns="6"
                android:stretchMode="columnWidth"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_dynamic_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/cancel"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/dialog_dynamic_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/save"
                android:textAllCaps="false"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>

</LinearLayout>