<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:hintEnabled="true"
        android:hint="@string/input_newname"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/rename_newname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:lines="1"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/rename_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@color/colorTransparent"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/rename_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@color/colorTransparent"
            android:text="@string/rename"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>