<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <LinearLayout
        android:id="@+id/dialog_sunrs_bg"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55000000"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timepicker_start"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timepicker_end"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#55000000"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TimePicker
                android:id="@+id/dialog_sunrs_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:timePickerMode="spinner"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorWhite"/>
            <TimePicker
                android:id="@+id/dialog_sunrs_end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:timePickerMode="spinner"/>
        </LinearLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55000000"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_sunrs_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:textAllCaps="false"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/dialog_sunrs_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:textAllCaps="false"
                android:text="@string/save"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>



</LinearLayout>